# jass

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
cmake/: FindGLFW3.cmake
data/obiecte/: spaceship.mtl
data/shaders/: 2default.frag  2default.vert  3default.frag  default.frag  default.vert
libs/: CMakeLists.txt  glad.c  tiny_obj_loader.cc  tiny_obj_loader.h
libs/glad/: glad.h
resources/objects/: spaceship.mtl
resources/shaders/: 2default.frag  2default.vert  3default.frag  3default.vert  3duntextured.frag  3duntextured.vert
src/: CMakeLists.txt  application.cpp  main.h  material.cpp  mesh.cpp  meshreader.cpp  meshreader.h  proiectile.cpp  proiectile.h  ship.cpp  stateintro.cpp  stateintro.h  stateplay.cpp  stateplay.h  video.cpp  video.h
src/jass/: application.cc  application.h  bitmap_drawable.cc  bitmap_drawable.h  buffer_object.cc  buffer_object.h  debug.cc  debug.h  drawable.cc  drawable.h  font_drawable.cc  font_drawable.h  fragment_shader.cc  fragment_shader.h  game_object.cc  game_object.h  image.cc  image.cpp  image.h  intro_background_game_object.cc  intro_background_game_object.h  intro_menu_game_object.cc  intro_menu_game_object.h  intro_text_game_object.cc  intro_text_game_object.h  intro_title_game_object.cc  intro_title_game_object.h  jass.cc  jass.h  main.cpp  material.cc  material.cpp  material.h  mesh.cc  mesh.cpp  mesh.h  mesh_reader.cc  mesh_reader.cpp  mesh_reader.h  play_background_game_object.cc  (+48 more)
src/jass/drawables/: bitmap.cc  bitmap.h  bitmap_drawable.cc  bitmap_drawable.h  drawable.cc  drawable.h  font.cc  font.h  font_drawable.cc  font_drawable.h  geometry.cc  geometry.h  geometry_drawable.cc  geometry_drawable.h  primitives.cc  primitives.h  primitives_drawable.cc  primitives_drawable.h
src/jass/game_objects/: game_object.cc  game_object.h  intro_background_game_object.cc  intro_background_game_object.h  intro_menu_game_object.cc  intro_menu_game_object.h  intro_text_game_object.cc  intro_text_game_object.h  intro_title_game_object.cc  intro_title_game_object.h  play_background_game_object.cc  play_background_game_object.h  play_board_game_object.cc  play_board_game_object.h  play_healthbar_game_object.cc  play_healthbar_game_object.h  play_projectile_game_object.cc  play_projectile_game_object.h  play_projectiles_game_object.cc  play_projectiles_game_object.h  play_ship_game_object.cc  play_ship_game_object.h
src/jass/game_objects/intro/: background.cc  background.h  menu.cc  menu.h  text.cc  text.h  title.cc  title.h
src/jass/game_objects/play/: background.cc  background.h  board.cc  board.h  healthbar.cc  healthbar.h  projectiles.cc  projectiles.h  ship.cc  ship.h
src/jass/gl/: fragment_shader.cc  fragment_shader.h  program.cc  program.h  shader.cc  shader.h  texture.cc  texture.h  vertex_array_object.cc  vertex_array_object.h  vertex_buffer_object.cc  vertex_buffer_object.h  vertex_shader.cc  vertex_shader.h
src/jass/resources/: image.cc  image.h  tiny_obj_loader.cc  tiny_obj_loader.h
src/jass/shaders/: fragment_shader.cc  fragment_shader.h  program.cc  program.h  shader.cc  shader.h  vertex_shader.cc  vertex_shader.h
src/jass/states/: intro.cc  intro.h  play.cc  play.h  state.cc  state.h  state_intro.cc  state_intro.h  state_play.cc  state_play.h  states_manager.cc  states_manager.h
src/jass/subsystems/: devil.cc  devil.h  gl.cc  gl.h  gl_renderer.cc  gl_renderer.h  gl_window.cc  gl_window.h  video.cc  video.h  window.cc  window.h
src/jass/utils/: debug.cc  debug.h
