CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ENABLE_LANGUAGE(CXX)

SET(CMAKE_MODULE_PATH
    ${CMAKE_SOURCE_DIR}/cmake
    ${CMAKE_MODULE_PATH})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(DevIL REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem)
FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

PROJECT(jass)

IF(NOT (CMAKE_BUILD_TYPE MATCHES "Debug"))
    MESSAGE(WARNING "Only Debug build is configured")
ENDIF()

IF(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O -Wall -Wextra -Wno-unused-parameter -Wno-missing-braces -Wpedantic -D_DEBUG -fsanitize=address -fno-omit-frame-pointer")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O -Wall -Wextra -Wno-unused-parameter -Wpedantic -D_DEBUG")
ENDIF()

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY
    ${CMAKE_SOURCE_DIR}/exe)

INCLUDE_DIRECTORIES(
  ${GLEW_INCLUDE_DIRS}
  ${GLM_INCLUDE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${IL_INCLUDE_DIR}
  ${SDL2_INCLUDE_DIR}
  src
)

FILE(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc)

ADD_EXECUTABLE(jass ${SRC_FILES})

TARGET_COMPILE_FEATURES(jass PRIVATE cxx_constexpr)

TARGET_LINK_LIBRARIES(jass
  ${GLEW_LIBRARIES}
  ${OPENGL_LIBRARIES}
  ${SDL2_LIBRARY}
  ${IL_LIBRARIES}
  ${Boost_LIBRARIES}
)
