CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

IF(POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 NEW)
ENDIF()

PROJECT(jass VERSION 0.1 LANGUAGES CXX)

SET(CMAKE_MODULE_PATH
    ${CMAKE_SOURCE_DIR}/cmake
    ${CMAKE_MODULE_PATH})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)
FIND_PACKAGE(DevIL REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem)

IF(CMAKE_BUILD_TYPE MATCHES "")
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

IF(NOT (CMAKE_BUILD_TYPE MATCHES "Debug"))
    MESSAGE(WARNING "Only Debug build is configured")
ENDIF()

ADD_SUBDIRECTORY(src)

# get_cmake_property(_variableNames VARIABLES)
# foreach (_variableName ${_variableNames})
#   message(STATUS "${_variableName}=${${_variableName}}")
# endforeach()
