IF(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall -Wextra -Wno-unused-parameter -Wno-missing-braces -Wpedantic -D_DEBUG -fsanitize=address -fno-omit-frame-pointer")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall -Wextra -Wno-unused-parameter -Wpedantic -D_DEBUG")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Od -W0 -D_DEBUG -DBOOST_ALL_DYN_LINK")
ENDIF()

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY
    ${CMAKE_SOURCE_DIR}/exe)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

ADD_EXECUTABLE(jass ${SRC_FILES})

IF(APPLE)

INCLUDE_DIRECTORIES(
    ${OPENGL_INCLUDE_DIR}
    ${GLM_INCLUDE_DIR}
    ${GLFW3_INCLUDE_DIR}
    ${IL_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(jass
    ${OPENGL_LIBRARIES}
    ${GLFW3_LIBRARY}
    ${IL_LIBRARIES}
    ${Boost_LIBRARIES}
    libs
)

ENDIF()

IF(UNIX AND NOT APPLE)

INCLUDE_DIRECTORIES(
    ${OPENGL_INCLUDE_DIR}
    ${GLM_INCLUDE_DIR}
    ${IL_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(jass
    ${OPENGL_LIBRARIES}
    ${GLFW_LIBRARIES}
    ${IL_LIBRARIES}
    ${Boost_LIBRARIES}
    libs
)

ENDIF()

IF(MSVC)

INCLUDE_DIRECTORIES(
    ${OPENGL_INCLUDE_DIR}
    ${GLM_INCLUDE_DIR}
    ${GLFW_INCLUDE_DIRS}
    ${IL_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(jass
    ${OPENGL_LIBRARIES}
    ${GLFW_LIBRARIES}
    ${IL_LIBRARIES}
    ${Boost_LIBRARIES}
    libs
)

ENDIF()

SET_PROPERTY(TARGET jass PROPERTY CXX_STANDARD 14)
